<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutAdd">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryApp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_workout"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:layout_marginVertical="20dp"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/etv_workout_create_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wrkout_name"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:minHeight="48dp"
                android:layout_marginVertical="30dp" />

            <EditText
                android:id="@+id/etv_workout_create_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wrkout_time"
                android:textSize="21sp"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:layout_marginVertical="30dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="143dp"
                android:layout_height="45dp"
                android:text="When To Do It"
                android:textSize="21sp"
                android:textAlignment="viewStart"
                android:layout_marginTop="30dp"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/dropdown_dow"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:popupBackground="@color/white"
                android:spinnerMode="dropdown"
                android:backgroundTint="@color/tertiaryApp"
                android:background="@color/primaryApp"
                android:layout_marginBottom="30dp"
                android:textAlignment="center" />


            <Button
                android:id="@+id/btn_to_exerciseAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Continue"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:textSize="21sp"
                android:backgroundTint="@color/tertiaryApp"/>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>