<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account">



    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow android:minHeight="48dp">

                <TextView
                    android:id="@+id/tv_account_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/UserName"
                    android:layout_span="2"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.047" />
            </TableRow>
            <!--Start of user basic info -->
            <TableRow android:minHeight="48dp">


                <TextView
                    android:id="@+id/label_account_User_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_span="2"
                    android:gravity="center"
                    android:text="@string/Aboutheader"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.047" />
            </TableRow>
            <TableRow android:minHeight="48dp">

                <TextView
                    android:id="@+id/label_account_FirstName"
                    android:layout_width="128dp"
                    android:layout_height="19dp"
                    android:text="@string/FirstName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.047" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_account_FirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.258" />
            </TableRow>
            <TableRow android:minHeight="48dp">

                <TextView
                    android:id="@+id/label_account_LastName"
                    android:layout_width="128dp"
                    android:layout_height="19dp"
                    android:text="@string/LastName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.047" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_account_LastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.258" />
            </TableRow>
            <TableRow android:minHeight="48dp">

                <TextView
                    android:id="@+id/label_account_Current_password"
                    android:layout_width="128dp"
                    android:layout_height="19dp"
                    android:text="@string/prompt_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.047" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_account_Current_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.258" />
            </TableRow>
            <TableRow android:minHeight="48dp">

                <TextView
                    android:id="@+id/label_account_email"
                    android:layout_width="128dp"
                    android:layout_height="19dp"
                    android:text="@string/prompt_email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.047" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_account_Current_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.258" />
            </TableRow>
            <!--Start of user Maxes info -->
            <TableRow android:minHeight="48dp">


                <TextView
                    android:id="@+id/label_account_Max_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_span="2"
                    android:gravity="center"
                    android:text="@string/Maxheader"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.047" />
            </TableRow>
            <TableRow android:minHeight="48dp">

                <TextView
                    android:id="@+id/label_account_maxBench"
                    android:layout_width="128dp"
                    android:layout_height="19dp"
                    android:text="@string/MaxWeightBench"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.047" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_account_maxBench"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Max Bench"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.258" />
            </TableRow>

            <TableRow android:minHeight="48dp">

                <TextView
                    android:id="@+id/label_account_maxSquat"
                    android:layout_width="128dp"
                    android:layout_height="19dp"
                    android:text="@string/MaxWeightSquant"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.047" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_account_maxSquat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Max Squat"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.346" />
            </TableRow>

            <TableRow android:minHeight="48dp">

                <TextView
                    android:id="@+id/label_account_maxDeadlift"
                    android:layout_width="128dp"
                    android:layout_height="19dp"
                    android:text="@string/MaxWeightDeadlift"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.047" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_account_maxDeadlift"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Max Deadlift"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.443" />

            </TableRow>

            <TableRow android:minHeight="48dp">

                <TextView
                    android:id="@+id/label_account_mileTime"
                    android:layout_width="128dp"
                    android:layout_height="19dp"
                    android:text="@string/BestTimeMile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.047" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_account_mileTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Fastest Mile Time"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.537" />
            </TableRow>
            <!--End of user Maxes info -->
            <TableRow>

                <Button
                    android:id="@+id/bt_account_maxUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Update"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.646"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.655" />

                <Button
                    android:id="@+id/bt_account_ToMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Main"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/bt_account_maxUpdate"
                    app:layout_constraintHorizontal_bias="0.394"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.655" />
            </TableRow>
        </TableLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>